--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 .idea/
 build/
+CMakeFiles/
+python/pyarmnn/src/pyarmnn/_generated/
 python/pyarmnn/pyarmnn_docs-*
-python/pyarmnn/test/testdata/
+python/pyarmnn/cmake_install.cmake
+python/pyarmnn/CMakeCache.txt
+python/pyarmnn/test/testdata/*
