--- a/python/pyarmnn/examples/requirements.txt
+++ b/python/pyarmnn/examples/requirements.txt
@@ -1,5 +1,4 @@
-requests>=2.23.0
-urllib3>=1.25.8
-Pillow>=6.1.0
-numpy>=1.18.1
-pyarmnn>=19.8.0
+requests==2.24.0
+urllib3==1.25.8
+Pillow==6.1.0
+numpy==1.18.1
